--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "sheets-backend",
   "version": "1.0.0",
+  "description": "Backend to export user data to Google Sheets",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Zachary Ludwig",
   "license": "ISC",
-  "description": "",
   "engines": {
-    "node": "18.x"
+    "node": "16.19.1"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "googleapis": "^150.0.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "googleapis": "^132.0.0"
   }
 }
